Use Spring Boot Style Tests